# fileChunk

./: Cargo.toml
src/: bigmath.rs  chunkstream.rs  lib.rs  rolling_hash.rs
tests/: .gitignore
tests/chunks/: restore_info.yaml
tests/data/: CSmall.txt
