[package]
name = "fileChunk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.9.27"
blake3 = "1.5.0"

[dependencies.indexmap]
version = "2.1.0"
features = ["serde"]

[dependencies.serde]
version = "1.0.190"
features = ["derive"]
